--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,17 @@
 {% extends 'base.html' %} {% block content%}
 
 <body>
-    <div class="card bg-dark text-white">
-        <img src="../static/images/car.jpg" style="height:300px;width:100%" class="align-self-center mr-3" alt="car image">
-        <div class="card-img-overlay">
-            <div class="card-title"><span class="badge badge-pill badge-warning title-span"><h1>Car Price Predictor</h1></span></div>
+    <div class="container">
+        <div class="card bg-dark text-white">
+            <img src="../static/images/car1.jpg" style="height:20%;width:37.2%" class="mr-3" alt="car image">
+            <div class="card-img-overlay">
+                <div class="card-title"><span class="badge badge-pill badge-warning title-span"><h1>Car Price Predictor</h1></span></div>
+            </div>
+            <img src="../static/images/car2.jpg" style="height:20%;width:37.2%" class="mr-3" alt="car image">
         </div>
     </div>
     <div class="container" style="margin-top:50px">
-        <form method="POST" class="needs-validation" novalidate action="\predict">
+        <form method="POST" class="needs-validation" id="carform" novalidate action="\predict">
             <div class="row">
                 <div class="col">
                     <div class="form-group">
@@ -47,6 +50,20 @@
                         <div class="form-group">
                             <label for="noyear">Number of Years</label>
                             <input type="text" readonly class="form-control" name="noyear" id="noyear">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal -->
+            <div class="modal fade" id="spinnermodal" tabindex="-1" role="dialog" aria-labelledby="spinnermodalTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <div class="d-flex justify-content-center">
+                                <div class="spinner-border" role="status">
+                                    <span class="sr-only">Loading...</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -110,7 +127,7 @@
             <div class="row">
                 <div class="col">
                     <div class="form-group">
-                <button type="submit" class="btn btn-primary predictbtn">Predict</button>
+                <button type="submit" data-toggle="modal" data-target="#spinnermodal" class="btn btn-primary predictbtn">Predict</button>
                 </div>
                 </div>
             </div>
@@ -131,12 +148,18 @@
         form.classList.add('was-validated');
       }, false);
     });
-  }, false);
+    }, false);
+
         $('#year').on('change', function() {
             currentyear = new Date().getFullYear();
             yearbought = $('#year')[0].value
             $('#noyear')[0].value = currentyear - yearbought
         })
+        // $('#carform').on('submit',function(event){
+        //     event.preventDefault()
+        //     $('#spinnermodal').show();
+        // })
+
     </script>
 </body>
 {% endblock %}
