--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="col">
                     <div class="form-group">
-                <button type="submit" data-toggle="modal" data-target="#spinnermodal" class="btn btn-primary predictbtn">Predict</button>
+                <button type="submit"  class="btn btn-primary predictbtn">Predict</button>
                 </div>
                 </div>
             </div>
@@ -144,7 +144,8 @@
         if (form.checkValidity() === false) {
           event.preventDefault();
           event.stopPropagation();
-        }
+        }  
+        else{$('#spinnermodal').modal({show:true});}
         form.classList.add('was-validated');
       }, false);
     });
@@ -157,7 +158,7 @@
         })
         // $('#carform').on('submit',function(event){
         //     event.preventDefault()
-        //     $('#spinnermodal').show();
+            
         // })
 
     </script>
